--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="rating">rating</string>
     <string name="duration">duration</string>
     <string name="owner">Film List by: Muhamad Istiady Kartadibrata</string>
+    <string name="favorite_action">favorite_action</string>
 </resources>
